fix bug scroll map overflow

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -25,7 +25,8 @@ $fontMain : 'Space Grotesk', Arial, Helvetica, sans-serif;
 body {
     font-family: $fontMain;
     overflow-x: hidden;
-    overflow-y: hidden
+    overflow-y: hidden;
+    overflow: hidden;
 }
 
 section {
@@ -115,7 +116,7 @@ section {
 .map {
     position: absolute;
     width: 100%;
-    height: 100%;
+    height: 80%!important;
 }
 
 .basicPlaceInfos {
